[package]
name = "openvr_driver_sys"
version = "1.0.0"
edition = "2021"

exclude = [
    "openvr/samples/*",
    "openvr/bin/*",
    "openvr/lib/*",
    "openvr/controller_callouts/*",
]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[build-dependencies]
cmake = "0.1.51"
cxx-build = "1.0.128"

[lib]
name = "openvr_driver_sys"
path = "src/lib.rs"

[features]
default = []

[dependencies]
cxx = "1.0.128"
